--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "favicon": "0.0.2",
+    "jquery": "^2.2.4",
     "jsonfile": "^2.3.1",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8",
